exports[`test Renders Button with outline 1`] = `
<button
  className="button outline primary"
  disabled={undefined}
  onClick={[Function]}>
  Test
</button>
`;

exports[`test Renders a custom theme button 1`] = `
<button
  className="button customCssModuleClass"
  disabled={undefined}
  onClick={[Function]}>
  Test
</button>
`;

exports[`test Renders a disabled Button 1`] = `
<button
  className="button primary"
  disabled={true}
  onClick={[Function]}>
  Test
</button>
`;

exports[`test Renders a full width button 1`] = `
<button
  className="button fullWidth primary"
  disabled={undefined}
  onClick={[Function]}>
  Test
</button>
`;

exports[`test Renders a mobile full width button 1`] = `
<button
  className="button mobileFullWidth primary"
  disabled={undefined}
  onClick={[Function]}>
  Test
</button>
`;

exports[`test Renders anchor button without crashing 1`] = `
<a
  className="button primary"
  disabled={undefined}
  onClick={[Function]}
  style={Object {}}>
  Test
</a>
`;

exports[`test Renders button without crashing 1`] = `
<button
  className="button primary"
  disabled={undefined}
  onClick={[Function]}>
  Test
</button>
`;
